# ros2_arm_container

./: README.md  plugin_test.sdf  setup.py
arm_model/: arm_ik_node.py  kinematics.py  streaming_bridge_node.py  teleop_input_node.py
arm_model/gazebo/worlds/: arm_model.sdf
bringup/config/: arm_controller.yaml
bringup/launch/: display.launch.py
description/ros2_control/: arm_model.ros2_control.xacro
description/urdf/: arm_model_description.urdf.xacro
gazebo/worlds/: arm_model.sdf
log/: latest_build
rviz/: display.rviz
scripts/pygame_make_angles/: README.md  angle_producer.py  config.py  test_sin.py
scripts/pygame_make_angles/arm/: arm_model.py  kinematics.py
scripts/pygame_make_angles/gui_files/: game_view.py  handling_inputs.py
src/: README.md  package.xml  setup.py
src/arm_model/: README.md  package.xml  setup.cfg  setup.py
src/arm_model/arm_model/: streaming_bridge_node.py
src/arm_model/bringup/config/: arm_controller.yaml  gz_bridge.yaml
src/arm_model/bringup/launch/: display.launch.py
src/arm_model/description/ros2_control/: arm_model.ros2_control.xacro
src/arm_model/description/urdf/: arm_model.urdf.xacro  arm_model_description.urdf.xacro
src/arm_model/gazebo/worlds/: arm_model.sdf
src/arm_model/scripts/pygame_make_angles/: README.md  angle_producer.py  config.py  test_sin.py
src/arm_model/scripts/pygame_make_angles/arm/: arm_model.py  kinematics.py
src/arm_model/scripts/pygame_make_angles/gui_files/: game_view.py  handling_inputs.py
src/bringup/launch/: display.launch.py
src/rviz/: display.rviz
(+10 files in other folders)
